Commento su calcolo AMB_tot
Ho aggiunto un commento per descrivere come AMB_tot è calcolato

--- a/Grafici_v2.ipynb
+++ b/Grafici_v2.ipynb
@@ -113,6 +113,7 @@
     "    \"PAPA_6\": \"Azione intrapresa: riduzione rifiuti di imballaggio\",\n",
     "    \"PAPA_7\": \"Azione intrapresa: contratto fornitura elettrica con rinnovabili\",\n",
     "    \"AMB_tot\": \"Preoccupazioni ambientali\",\n",
+    "    \"AMB_tot\": \"Preoccupazioni ambientali\", # = somma di EA_1, EA_2, EA_3, EA_4 + somma di PP1_1, PP2_1, PP2_2, PP2_3, PP2_4, PP2_5, PP2_6 + somma di PAPA_1, PAPA_2, PAPA_3, PAPA_4, PAPA_5, PAPA_6, PAPA_7\n",
     "    \"AFKintro\": \"Conoscenza combustibili alternativi\",\n",
     "    \"AFK_1\": \"Veicolo completamente elettrico considerato combustibile alternativo\",\n",
     "    \"AFK_2\": \"Elettrico ibrido plug-in considerato combustibile alternativo\",\n",
